--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
  <h1>The Official Hackathon Survey</h1>
 
 <form id="form">
-  
+
   <input type="text" value="first name hommie"><br>
   <input type="text" value="what your name be"><br>
-  
+
 </form>
- 
- 
+
+
  <script src= "./js/app.js"></script>
 </body>
-</html>git p
+</html>
