--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>The Official Hackathon Survey</title>
-  <link rel="stylesheet" type="text/css" href="./styles/styles.css">
-  <link rel="stylesheet" type="text/css" href="./styles/rest.css">
+  <link rel="stylesheet" type="text/css" href="./styles/app.css">
 </head>
 <body>
  <h1>The Official Hackathon Survey</h1>
 
 <form id="form">
-  
+
   <input type="text" value="first name hommie"><br>
   <input type="text" value="what your name be"><br>
-  
+
 </form>
- 
- 
+
+
  <script src= "./js/app.js"></script>
 </body>
 </html>
