--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>The Official Hackathon Survey</title>
-  <link rel="stylesheet" type="text/css" href="./styles/styles.css">
   <link rel="stylesheet" type="text/css" href="./styles/rest.css">
+  <link rel="stylesheet" type="text/css" href="./styles/styles.css">
 </head>
 <body>
  <h1>The Official Hackathon Survey</h1>
 
 <form id="form">
-
-  <input type="text" value="first name hommie"><br>
-  <input type="text" value="what your name be"><br>
-
+  <div id="content"></div>
+  <div>
+    <button type="submit" class="nextBtn" id="nextBtn">Submit</button>
+  </div>
 </form>
 
 
