--- a/index.html
+++ b/index.html
@@ -6,14 +6,29 @@
   <link rel="stylesheet" type="text/css" href="./styles/app.css">
 </head>
 <body>
- <h1>The Official Hackathon Survey</h1>
+<div id ="section01">
+  <div class="container">
+    <img src="../assets/images/unipoop.png" alt="UNIPOOP">
+    <h1>The Official Stupid Shit Hackathon HNL Survey</h1>
+    <h2>A Survey You'll Regret Ever Starting</h2>
+  </div>
 
-<form id="form">
 
-  <input type="text" value="first name hommie"><br>
-  <input type="text" value="what your name be"><br>
+<div id="intro-questions">
+  <h2 class="section-header">
+    Basic Information
+  </h2>
+  <form id="form">
+    <div class="container">
+      <input type="text" value="first name hommie"><br>
+      <input type="text" value="what your name be"><br>
+    </div>
+  </form>
 
-</form>
+</div>
+
+
+</div>
 
 
  <script src= "./js/app.js"></script>
