rough input styling

--- a/index.html
+++ b/index.html
@@ -6,28 +6,27 @@
   <link rel="stylesheet" type="text/css" href="./styles/app.css">
 </head>
 <body>
-<div id ="section01">
+<div id ="section01" class="section">
   <div class="container">
     <img src="../assets/images/unipoop.png" alt="UNIPOOP">
     <h1>The Official Stupid Shit Hackathon HNL Survey</h1>
     <h2>A Survey You'll Regret Ever Starting</h2>
   </div>
-
-
-<div id="intro-questions">
-  <h2 class="section-header">
-    Basic Information
-  </h2>
-  <form id="form">
-    <div class="container">
-      <input type="text" value="first name hommie"><br>
-      <input type="text" value="what your name be"><br>
-    </div>
-  </form>
-
 </div>
 
 
+<div class="section" id="intro-questions">
+  <div class="container">
+    <h2 class="section-header">
+      Basic Information
+    </h2>
+    <form id="form">
+      <div class="container">
+        <input type="text" value="first name hommie"><br>
+        <input type="text" value="what your name be"><br>
+      </div>
+    </form>
+  </div>
 </div>
 
 
