--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id ="section01" class="section">
   <div class="container">
-    <img src="../assets/images/unipoop.png" alt="UNIPOOP">
+    <img src="./assets/images/unipoop.png" alt="UNIPOOP">
     <h1>The Official Stupid Shit Hackathon HNL Survey</h1>
     <h2>A Survey You'll Regret Ever Starting</h2>
   </div>
