--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <form id="form">
   <div id="content"></div>
-  <div>
+  <div class="submit-section">
     <button type="submit" class="nextBtn" id="nextBtn">Submit</button>
   </div>
 </form>
