added background animation to button and changes to next

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <form id="form">
   <div id="content"></div>
   <div class="submit-section">
-    <button type="submit" class="nextBtn" id="nextBtn">Submit</button>
+    <button type="submit" class="nextBtn" id="nextBtn">Next</button>
   </div>
 </form>
 
