number counter implemented

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <div>
     <button type="submit" class="nextBtn" id="nextBtn">Submit</button>
   </div>
+
+  <div id="numbers">Questions Left: 20</div>
 </form>
 
 
